# voCLI

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/commands/: config.md  install.md  remote-install.md  talk.md
.claude/skills/: config.md  install.md
scripts/: serve.sh
vocli/: config.py  installer.py  server.py
vocli/data/: hooks.json
vocli/prompts/: install.py
vocli/servers/: stt_server.py  tts_server.py
vocli/tools/: service.py  talk.py
